// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/atomic-component-health-check when all conditions are met should print green checks only 1`] = `
"[32m✔[39m [1mReadme file[22m

[32m✔[39m [1mRequired properties in package.json[22m

"
`;

exports[`@coveo/atomic-component-health-check when package.json conditions are not met should warn about invalid properties 1`] = `
"[32m✔[39m [1mReadme file[22m

[31m✖[39m [1mRequired properties in package.json[22m
    [31m✖[39m [1mInvalid keywords: [22mThe package.json keywords should include "coveo-atomic-component", otherwise your component will not be listed along with other Coveo custom components. For more info, visit https://docs.npmjs.com/cli/v9/configuring-npm/package-json#keywords
    [31m✖[39m [1mInvalid description: [22mThe component description should be at least 20 characters long

Publish aborted because some conditions have not been met
Make sure to address the above errors before publishing again
"
`;

exports[`@coveo/atomic-component-health-check when package.json conditions are not met should warn about missing properties 1`] = `
"[32m✔[39m [1mReadme file[22m

[31m✖[39m [1mRequired properties in package.json[22m
    [31m✖[39m [1mInvalid unpkg: [22mYou should provide the path to the .esm.js file of your custom component. You can find it under the dist/ folder once you build the component
    [31m✖[39m [1mInvalid keywords: [22mMissing keywords property. For more info, visit https://docs.npmjs.com/cli/v9/configuring-npm/package-json#keywords
    [31m✖[39m [1mInvalid description: [22mYou should provide a description of at least 20 characters explaining the component's purpose
    [31m✖[39m [1mInvalid homepage: [22mYou need to provide an URL to the component source code. For more info, visit https://docs.npmjs.com/cli/v9/configuring-npm/package-json#homepage

Publish aborted because some conditions have not been met
Make sure to address the above errors before publishing again
"
`;

exports[`@coveo/atomic-component-health-check when readme condition is not met should warn about missing readme file 1`] = `
"[31m✖[39m [1mReadme file[22m
  Missing README file. Make sure to include a \`README.md\` file in your component directory

[32m✔[39m [1mRequired properties in package.json[22m

Publish aborted because some conditions have not been met
Make sure to address the above errors before publishing again
"
`;
